# BugHog

./: .dockerignore  .env  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: run-tests-and-linter.yml  trigger-dev-build-job.yml  trigger-main-build-job.yml  trigger-release-build-job.yml
analysis/: plot_factory.py
bci/: app.py  cli.py  configuration.py  main.py  master.py  util.py  worker.py
bci/analysis/: plot_factory.py
bci/browser/: statistics.py  support.py
bci/browser/automation/: terminal.py
bci/browser/binary/: artisanal_manager.py  binary.py  factory.py
bci/browser/binary/vendors/: chromium.py  firefox.py
bci/browser/cli_options/: firefox.py
bci/browser/configuration/: browser.py  chromium.py  firefox.py  options.py  profile.py
bci/browser/interaction/: interaction.py  simulation.py  simulation_exception.py
bci/browser/interaction/browsers/: browser.py  chromium.py  firefox.py
bci/database/mongo/: binary_cache.py  container.py  mongodb.py  revision_cache.py
bci/distribution/: worker_manager.py
bci/evaluations/: collector.py  evaluation_framework.py  experiments.py  logic.py  outcome_checker.py
bci/evaluations/collectors/: base.py  collector.py  logs.py  requests.py
bci/evaluations/custom/: custom_evaluation.py  custom_mongodb.py
bci/evaluations/custom/default_files/: interaction_script.cmd  js  script.cmd  url_queue.txt
bci/evaluations/samesite/: samesite_evaluation.py  samesite_mongodb.py
bci/evaluations/xsleaks/: evaluation.py  mongodb.py
bci/evaluations/xsleaks/testcase/: cases.py  first.py  testcase.py
bci/http/: collector.py
bci/integration_tests/: evaluation_configurations.py  verify_results.py
bci/proxy/: ca_generator.py  proxy.py
bci/revision_parser/: chromium_parser.py
bci/search_strategy/: bgb_search.py  bgb_sequence.py  composite_search.py  n_ary_search.py  n_ary_sequence.py  sequence_elem.py  sequence_strategy.py
bci/ui/: app.py
bci/ui/blueprints/: api.py
bci/ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
bci/ui/frontend/src/: App.vue  main.js  style.css
bci/version_control/: factory.py  state_factory.py  state_result_factory.py
bci/version_control/revision_parser/: chromium_parser.py  parser.py
bci/version_control/states/: chromium.py  factory.py  firefox.py  state.py
bci/web/: clients.py  page_parser.py
bci/web/blueprints/: api.py  experiments.py  test.py
bci/web/templates/: base.html  cookies.html  integration_tests.html
bci/web/vue/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
bci/web/vue/src/: App.vue  (+3 more)
bughog/: app.py  cli.py  configuration.py  main.py  parameters.py  util.py  worker.py
bughog/analysis/: plot_factory.py
bughog/database/mongo/: cache.py  container.py  executable_cache.py  mongodb.py
bughog/distribution/: worker_manager.py
bughog/evaluation/: evaluation.py  experiment.py  experiment_result.py  experiments.py  file_structure.py  interaction.py
bughog/evaluation/collectors/: base.py  collector.py  logs.py  requests.py
bughog/evaluation/custom/: custom_evaluation.py
bughog/integration_tests/: evaluation_configurations.py  verify_results.py
bughog/search_strategy/: bgb_search.py  bgb_sequence.py  composite_search.py  sequence_strategy.py
bughog/subject/: base.py  evaluation_framework.py  executable.py  factory.py  interaction.py  simulation.py  state_oracle.py  subject.py
bughog/subject/js_engine/: evaluation_framework.py  simulation.py  subject.py
bughog/subject/wasm_runtime/: evaluation_framework.py  simulation.py  subject.py
bughog/subject/web_browser/: evaluation.py  evaluation_framework.py  executable.py  state_cache.py  subject.py
bughog/subject/webbrowser/: base.py  evaluation.py  executable.py  profile.py  repository.py  state_cache.py  subject.py
bughog/version_control/: state_factory.py  state_not_found.py
bughog/version_control/revision_parser/: bughog.py  chromium_parser.py  github.py
bughog/version_control/state/: base.py  commit_state.py  release_state.py
bughog/web/: clients.py
bughog/web/blueprints/: api.py  experiments.py  test.py
bughog/web/templates/: cookies.html  integration_tests.html
bughog/web/vue/: package-lock.json  package.json  tailwind.config.js  vite.config.js
config/: .env.example
docs/: SUPPORT.md
docs/experiments/: README.md  web_browser.md
experiments/: README.md
experiments/res/: bughog.css
experiments/resources/CSP/: c756018.as  c756018.swf
nginx/: nginx.conf  start.sh
nginx/config/: core_dev.conf  core_prod.conf  experiments.conf  nginx.conf  notify_collector.conf
nginx/ssl/: bughog.cnf  bughog.ext  generate_CA.sh  generate_certs.sh
profiles/firefox/: cert8.db
profiles/firefox/tp-67/: pkcs11.txt  prefs.js  search.json.mozlz4
profiles/firefox2/: LittleProxy_MITM.cer
resources/scripts/bci/: core.sh  worker.sh
resources/scripts/chromium/: google-chrome-btpc  google-chrome-btpc-46  google-chrome-default  google-chrome-extension
resources/ssl/: bughog_ca.crt
scripts/: build.sh  node_dev.sh  node_update.sh  pip_update.sh  pull.sh  restart.sh  start.sh  stop.sh  uv_update.sh
scripts/boot/: core.sh  generate_certs.sh  manage_certs.sh  setup_environment.sh  worker.sh
scripts/chromium/: google-chrome-btpc-46
scripts/daemon/: xvfb
subject/web_browser/extensions/: README.md
subject/web_browser/resources/: bughog.css  video.webm
test/availability/: test_folders.py
test/evaluation_framework/: test_poc_parameter_parsing.py
test/experiments/: test_poc_parameter_parsing.py
test/http_collector/: test_collector.py
test/resources/csv_output/: pdf.csv
test/sequence/: test_biggest_gap_bisection_search.py  test_biggest_gap_bisection_sequence.py  test_composite_search.py  test_search_strategy.py  test_sequence_strategy.py
test/states/: test_state_result.py
(+958 files in other folders)
