[project]
name = "bughog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "dnspython==2.7.0",
    "docker==7.1.0",
    "flask==3.1.1",
    "flask-sock==0.7.0",
    "flatten-dict==0.4.2",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mouseinfo==0.1.3",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyautogui==0.9.54",
    "pygetwindow==0.0.9",
    "pymongo==4.12.1",
    "pymsgbox==1.0.9",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python3-xlib==0.15",
    "pytweening==1.2.0",
    "pyvirtualdisplay==3.0",
    "requests==2.32.3",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "xlib==0.21",
]

[dependency-groups]
dev = [
    "anybadge==1.16.0",
    "astroid==3.3.10",
    "autopep8==2.3.2",
    "blinker==1.9.0",
    "boto3==1.38.15",
    "botocore==1.38.15",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "coverage[toml]==7.8.0",
    "debugpy==1.8.14",
    "dill==0.4.0",
    "dnspython==2.7.0",
    "docker==7.1.0",
    "flake8==7.2.0",
    "flask==3.1.1",
    "flask-sock==0.7.0",
    "flatten-dict==0.4.2",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mouseinfo==0.1.3",
    "packaging==25.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "pluggy==1.5.0",
    "pyautogui==0.9.54",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pygetwindow==0.0.9",
    "pylint==3.3.7",
    "pymongo==4.12.1",
    "pymsgbox==1.0.9",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-flake8==1.3.0",
    "python-dateutil==2.9.0.post0",
    "python3-xlib==0.15",
    "pytweening==1.2.0",
    "pyvirtualdisplay==3.0",
    "requests==2.32.3",
    "s3transfer==0.12.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "tomlkit==0.13.2",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "xlib==0.21",
]

[tool.pytest.ini_options]
addopts = "--cov=bci --cov-report=xml --cov-report=term --junitxml=junit.xml"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Don't break long lines. VS Code vertical lines nudge towards shorter lines.
line-length = 999
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]
# Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pyright]
exclude = [
    "**/.venv/**",
    "**/build/**",
    "**/dist/**",
    "**/__pycache__/**",
    "/app/subject/binaries/**",
]
