[project]
name = "bughog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "docker==7.1.0",
    "flask==3.1.1",
    "flask-sock==0.7.0",
    "flatten-dict==0.4.2",
    "gunicorn==23.0.0",
    "pillow==12.0.0",
    "pyautogui==0.9.54",
    "pymongo==4.12.1",
    "pyvirtualdisplay==3.0",
    "requests==2.32.3",
    "xlib==0.21",
]

[dependency-groups]
dev = [
    "anybadge==1.16.0",
    "coverage[toml]==7.8.0",
    "debugpy==1.8.14",
    "flake8==7.2.0",
    "genbadge[all]>=1.1.2",
    "pylint==3.3.7",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-flake8==1.3.0",
]

[tool.pytest.ini_options]
addopts = "--cov=bughog --cov-report=xml --cov-report=term --junitxml=junit.xml"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Don't break long lines. VS Code vertical lines nudge towards shorter lines.
line-length = 999
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]
# Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pyright]
exclude = [
    "**/.venv/**",
    "**/build/**",
    "**/dist/**",
    "**/__pycache__/**",
    "/app/subject/binaries/**",
]
